--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -2,13 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/draw_insets_frame_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
    <android.support.v4.widget.NestedScrollView
-       app:layout_behavior=
-           "@string/appbar_scrolling_view_behavior"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
+      android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:clipToPadding="false"
+       app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
        <android.support.v7.widget.CardView
 
            android:layout_width="match_parent"
@@ -26,37 +28,25 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
 
-               <!--<FrameLayout-->
-               <!--android:id="@+id/photo_container"-->
-               <!--android:layout_width="match_parent"-->
-               <!--android:layout_height="wrap_content"-->
-               <!--android:background="@color/photo_placeholder">-->
-               <!--&lt;!&ndash;suppress AndroidLintContentDescription &ndash;&gt;-->
-
-
-               <!--<View-->
-               <!--android:layout_width="match_parent"-->
-               <!--android:layout_height="1dp"/>-->
-
-               <!--</FrameLayout>-->
-
                <TextView
                    android:id="@+id/article_title"
+                   android:paddingLeft="16dp"
+                   android:paddingRight="16dp"
+                   android:paddingTop="8dp"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
-                   android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="@dimen/detail_title_text_size"
                    android:lineSpacingMultiplier="0.9" />
 
                <TextView
                    android:id="@+id/article_byline"
+                   android:padding="16dp"
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:textColor="#8fff" />
+                   android:layout_height="wrap_content" />
 
                <TextView
                    android:id="@+id/article_body"
@@ -65,43 +55,58 @@
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
-                   android:paddingBottom="@dimen/detail_body_bottom_margin"
-                   android:textColor="@color/ltgray"
                    android:textColorLink="@color/theme_accent"
                    android:textSize="@dimen/detail_body_text_size"
                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
-
     <android.support.design.widget.AppBarLayout
-
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.Toolbar android:id="@+id/toolbar1"
-            app:layout_scrollFlags="scroll|enterAlways"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:fitsSystemWindows="true">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:minHeight="0dp" >
-            <ImageView
-                android:id="@+id/photo"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMargin="0dp"
+            android:fitsSystemWindows="true">
+
+            <com.example.xyzreader.ui.SquareImageView
+                android:id="@+id/image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                />
-        </android.support.v7.widget.Toolbar>
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax"/>
+
+            <android.support.v7.widget.Toolbar
+                app:layout_scrollFlags="scroll"
+                android:fitsSystemWindows="true"
+                android:id="@+id/toolbar1"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin" />
+
+        </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
-    <!--<ImageButton android:id="@+id/share_fab"-->
-        <!--android:stateListAnimator="@anim/fab_state_list_anim"-->
-        <!--android:background="@drawable/add_fab_background"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--android:layout_marginRight="@dimen/fab_margin"-->
-        <!--android:layout_marginBottom="@dimen/fab_margin"-->
-        <!--android:layout_width="56dp"-->
-        <!--android:layout_height="56dp"-->
-        <!--android:src="@drawable/ic_share"-->
-        <!--android:elevation="@dimen/fab_elevation"-->
-        <!--android:contentDescription="@string/action_share" />-->
+
+    <android.support.design.widget.FloatingActionButton
+        app:layout_anchor="@id/app_bar_layout"
+        app:layout_anchorGravity="bottom|right|end"
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_share"
+        app:elevation="6dp"
+        android:layout_marginRight="8dp"
+        app:pressedTranslationZ="12dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
