--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -18,19 +18,32 @@
 <resources>
 
     <style name="Theme.Bacon" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Main theme colors -->
-        <!--   your app branding color for the app bar -->
-        <item name="colorPrimary">@color/primary</item>
-        <!--   darker variant for the status bar and contextual app bars -->
+         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
-        <!--   theme UI controls like checkboxes and text fields -->
+        <!--<item name="colorPrimaryDark">@android:color/transparent</item>-->
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColor">@color/abc_primary_text_material_dark</item>
         <item name="android:subtitleTextStyle">@color/link_text_material_light</item>
         <item name="windowActionBarOverlay">false</item>
     </style>
+    <style name="Theme.Bacon.TranslucentActionBar">
+        <item name="android:actionBarStyle">@style/Widget.ActionBar</item>
+    </style>
+
+    <style name="Theme.Bacon.TranslucentActionBar.ActionBar" />
+
+    <style name="Theme.Bacon.TranslucentActionBar.ActionBar.Overlay">
+        <item name="android:actionBarStyle">@style/Widget.ActionBar.Transparent</item>
+        <item name="android:windowActionBarOverlay">true</item>
+    </style>
     <!--<style name="Theme.Bacon.Detail">-->
         <!--<item name="statusBarColor">@android:color/transparent</item>-->
     <!--</style>-->
+    <style name="Widget.ActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@drawable/snackbar_background</item>
+    </style>
 
+    <style name="Widget.ActionBar.Transparent">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
 </resources>
